gs-rest-service/gs-rest-service.yaml
---
kind: Service
apiVersion: v1
metadata:
 name: gs-rest-service
 namespace: default
 labels:
   app: gs-rest-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gs-rest-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gs-rest-service-ingress
  namespace: default
  labels:
    ingresstype: none
spec:
  tls:
    - hosts:
      - iot.yarden.appfactory.kpnis.nl
      secretName: tls-secret-yarden2
  rules:
  - host: iot.yarden.appfactory.kpnis.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: gs-rest-service
          servicePort: 8080
